[package]
name = "Fifteen-Game"
version = "0.1.0"
authors = ["kletska <kletska.epa@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", features = ["framework", "standard_framework", "rustls_backend"]}
tokio = {version = "1.0.0", feature = ["rt", "macros"]}
rand = "0.8.4"